# analista-midia-backend

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analista_midia_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: __init__.py  main.py
app/agent/: __init__.py  agent.py  agent_factory.py  prompts.py  tools_factory.py
app/api/: __init__.py  auth.py  dependencies.py  routes.py
app/domain/: __init__.py  exceptions.py  interfaces.py  schemas.py
app/services/: __init__.py  analytics_repository.py  bigquery_client.py  mock_analytics_repository.py
config/: __init__.py  constants.py  exceptions.py  settings.py
tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_config.py  test_domain.py  test_services.py
